:honeybee: header content

--- a/prototype/index.html
+++ b/prototype/index.html
@@ -2,13 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="../data/build/data/series.js"></script>
     <title>TV SERIES</title>
     <link rel="stylesheet" href="style.css">
   </head>
 <body>
-  <div class="header">
+  <div class="header"></div>
+  <div class="header-info">
+    <h1>Limitless</h1>
   </div>
   <div class="covers-container">
   </div>
